grammar.js
    source_file: $ => seq(
      repeat($.import_statement),
      $.agent_definition
    ),

    // Comments
    identifier: $ => /[A-Z][A-Za-z0-9\-_]*(\s[A-Z][A-Za-z0-9\-_]*)*/, 
    string: $ => /"(\\.|[^"\\])*"/,
    multi_line_string: $ => seq(
      choice(
        '|',         // clean
        '|-',        // trim
        '+|',        // preserve
        '+|+'        // preserve all
      ),
      $._indent,
      repeat(/.*/),
      $._dedent
    ),

    // Type tags
    type_tag: $ => seq(
      '<',
      /[a-zA-Z]+/,
      choice(
        $.string,
        $.number,
        $.boolean_literal,
        $.null_literal,
        $.atom,
        $.identifier,
        $.iso_duration
      ),
      optional(seq('|', /[^>]+/)),
      '>'
    ),

    // Core value types
    simple_value: $ => choice(
      $.string,
      $.number,
      $.boolean_literal,
      $.null_literal,
      $.atom,
      $.type_tag
    ),

    enhanced_simple_value: $ => choice(
      $.simple_value,
      $.multi_line_string
    ),

    embedded_value: $ => prec(1, choice(
      $.embedded_code,
      $.simple_value
    )),

    typed_value: $ => prec(2, choice(
      $.type_tag,
      $.enhanced_simple_value
    )),

    // Parameters and properties
    agent_definition: $ => seq(
      'agent',
      $.identifier,
      $._indent,
      seq('displayName', ':', $.string),
      optional(seq('brandName', ':', $.string)),
      optional($.config_section),
      optional($.defaults_section),
      repeat1($.flow_section),
      $.messages_section,
      $._dedent
    ),

    // Defaults section
    defaults_section: $ => seq(
      'agentDefaults',
      'Defaults',
      $._indent,
      repeat($.default_property),
      $._dedent
    ),

    default_property: $ => choice(
      seq('fallbackMessage', ':', $.enhanced_simple_value),
      seq('messageTrafficType', ':', $.atom),
      seq('ttl', ':', $.string),
      seq('postbackData', ':', $.embedded_code),
      seq('expressions', ':', $._indent, seq('language', ':', $.atom), $._dedent)
    ),

    // Config section
    config_section: $ => seq(
      'agentConfig',
      'Config',
      $._indent,
      repeat($.config_property),
      $._dedent
    ),

    phone_number_property: $ => seq(
      'phoneNumberEntry',
      $._indent,
      seq('number', ':', $.typed_value),
      optional(seq('label', ':', $.enhanced_simple_value)),
      $._dedent
    ),

    email_property: $ => seq(
      'emailEntry',
      $._indent,
      seq('address', ':', $.typed_value),
      optional(seq('label', ':', $.enhanced_simple_value)),
      $._dedent
    ),

    website_property: $ => seq(
      'websiteEntry',
      $._indent,
      seq('url', ':', $.typed_value),
      optional(seq('label', ':', $.enhanced_simple_value)),
      $._dedent
    ),

    messages_section: $ => seq(
      'messages',
      'Messages',
      $._indent,
      repeat1(choice($.agent_message, $.message_shortcut)),
      $._dedent
    ),

    // Agent messages
    agent_message: $ => seq(
      'agentMessage',
      optional($.identifier),
      $._indent,
      optional(seq('messageTrafficType', ':', $.atom)),
      optional(choice(
        seq('expireTime', ':', $.string),
        seq('ttl', ':', $.string)
      )),
      $.content_message,
      $._dedent
    ),

    content_message: $ => seq(
      'contentMessage',
      $._indent,
      choice(
        seq('text', ':', choice($.enhanced_simple_value, $.embedded_value)),
        seq('fileName', ':', $.string),
        seq('uploadedRbmFile', $.uploaded_rbm_file),
        seq('richCard', $.rich_card),
        seq('contentInfo', $.content_info)
      ),
      repeat($.suggestion),
      $._dedent
    ),

    message_shortcut: $ => seq(
      optional(choice('transactional', 'promotional')),
      $.text_shortcut
      // TODO: Add file_shortcut, rich_card_shortcut and carousel_shortcut after resolving conflicts
    ),

    text_shortcut: $ => seq(
      'text',
      $.identifier,  // Message ID comes first
      choice($.enhanced_simple_value, $.embedded_value),  // Then text parameter
      optional(seq(
        $._indent,
        repeat($.suggestion_shortcut),
        $._dedent
      ))
    ),

    // TODO: Fix file_shortcut conflicts
    // file_shortcut: $ => seq(
    //   choice(
    //     seq('rbmFile', $.string, optional($.string)),
    //     seq('file', $.typed_value, optional($.typed_value), prec(-1, optional($.atom)))
    //   ),
    //   optional(seq(
    //     $._indent,
    //     repeat($.suggestion_shortcut),
    //     $._dedent
    //   ))
    // ),

    // TODO: Fix conflicts in rich_card_shortcut and carousel_shortcut
    // rich_card_shortcut: $ => seq(
    //   'richCard',
    //   $.enhanced_simple_value,
    //   prec(-1, repeat(choice($.atom, $.typed_value))),
    //   optional(seq(
    //     $._indent,
    //     optional(seq('description', ':', $.enhanced_simple_value)),
    //     repeat($.suggestion_shortcut),
    //     $._dedent
    //   ))
    // ),

    // carousel_shortcut: $ => seq(
    //   'carousel',
    //   optional($.atom),
    //   $._indent,
    //   repeat1($.rich_card_shortcut),
    //   $._dedent
    // ),

    // Suggestion shortcuts
